--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,7 @@
 body {
   text-align: center;
   background: silver;
+  font-family: 'Rammetto One', cursive;
 }
 li {
   padding: 5px;
@@ -11,6 +12,7 @@ li {
 
 .label {
   font-weight: bold;
+  font-family: Roboto;
 }
 
 .create-update-form {
